--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -371,6 +371,13 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2024}
 }
 
+@misc{ajax,
+    author = {Tomasz Kozon},
+    title = {{AJAX - co to jest AJAX i jak działa?}},
+    note = {\url{https://boringowl.io/blog/ajax} [dostęp dnia 28 listopada 2024]},
+    year = {2024}
+}
+
 @booklet{Marcin,
 title = {{BPMN Notacja modelowania procesów biznesowych}},
 author = {Moś, M.},
