--- a/Dyplom/rozdzial01.tex
+++ b/Dyplom/rozdzial01.tex
@@ -47,4 +47,19 @@ Aplikacja będzie dostępna w przeglądarce internetowej i zoptymalizowana pod k
 Frontend aplikacji zostanie zaprojektowany w języku TypeScript z wykorzystaniem frameworka Next.js, co pozwoli na stworzenie nowoczesnego, responsywnego interfejsu użytkownika, zapewniającego intuicyjną obsługę oraz szybkie działanie systemu.
 
 \section{Układ pracy}
-% tutaj opis zawartości kolejnych rozdziałów, można zredagować na końcu
+
+Praca składa się z pięciu głównych rozdziałów, które kompleksowo opisują proces projektowania, implementacji oraz potencjalnego wdrożenia systemu „Harmony Home Net”:
+
+\begin{itemize}
+    \item \textbf{Rozdział 1: Wstęp} -- Rozdział wprowadzający w tematykę pracy, opisujący znaczenie elektronicznych biur obsługi klienta (eBOK) w sektorach takich jak zarządzanie nieruchomościami. Przedstawiono cel projektu, uzasadnienie wyboru tematu oraz jego zakres.
+
+    \item \textbf{Rozdział 2: Analiza wymagań} -- Szczegółowy opis wymagań funkcjonalnych i niefunkcjonalnych systemu. W rozdziale tym przedstawiono przykłady użycia, zidentyfikowano główne komponenty systemu oraz opisano ich wzajemne zależności. Analiza wymagań stanowi podstawę do projektowania systemu.
+
+    \item \textbf{Rozdział 3: Implementacja} -- Kluczowy rozdział pracy, w którym opisano proces budowy aplikacji. Omówiono zastosowaną architekturę warstwową, szczegóły projektowania bazy danych oraz implementację głównych modułów, takich jak zarządzanie użytkownikami, płatnościami, głosowaniami i powiadomieniami. Rozdział ten obejmuje także opis wykorzystania technologii AJAX w warstwie frontendowej, umożliwiającej płynną i asynchroniczną komunikację z serwerem.
+
+    \item \textbf{Rozdział 4: Podsumowanie pracy} -- W rozdziale podsumowano rezultaty pracy, wskazując na osiągnięcia oraz trudności napotkane podczas implementacji. Omówiono wnioski płynące z realizacji projektu oraz zasugerowano możliwe kierunki dalszego rozwoju systemu.
+
+    \item \textbf{Rozdział 5: Wdrożenie aplikacji} -- Ten rozdział będzie traktował o tym w jaki sposób wdrożyć aplikację internetową by mogła być używana przez szersze grono odbiorców.
+\end{itemize}
+
+Układ pracy pozwala na logiczne i spójne zapoznanie się z tematyką, od wprowadzenia i analizy wymagań, poprzez implementację i podsumowanie, aż po kwestie związane z potencjalnym wdrożeniem systemu.
