--- a/Dyplom/Dyplom.tex
+++ b/Dyplom/Dyplom.tex
@@ -976,6 +976,9 @@ Specjalność: & {\bfseries \@specjalnosc}\\
 \include{rozdzial01}
 \include{rozdzial02}
 \include{rozdzial03}
+\include{rozdzial04}
+\include{dodatekA}
+\include{dodatekB}
 % LITERATURA (zostanie wygenerowana automatycznie)
 %UWAGA: bibliotekę referencji należy przygotować samemu. Dobrym do tego narzędziem jest JabRef.
 %       JabRef oferuje jednak większą liczbę typów rekordów niż obsługuje BibTeX.
