--- a/Dyplom/rozdzial04.tex
+++ b/Dyplom/rozdzial04.tex
@@ -2,17 +2,16 @@
 
 Niniejsza praca dyplomowa przedstawia proces projektowania i implementacji systemu „Harmony Home Net” – aplikacji typu eBOK dedykowanej wspólnotom mieszkaniowym. Głównym celem projektu było stworzenie rozwiązania wspierającego zarządzanie wspólnotami, komunikację pomiędzy mieszkańcami a administracją oraz automatyzację kluczowych procesów związanych z obsługą nieruchomości. Poniżej podsumowano kluczowe aspekty realizacji tego przedsięwzięcia.
 
-\section{Zakres projektu}
+\section{Zakres i wynik projektu}
 W pracy przedstawiono pełny cykl życia oprogramowania, począwszy od analizy wymagań funkcjonalnych i niefunkcjonalnych, poprzez projektowanie architektury, aż po implementację i testy prototypu. System został zaprojektowany w oparciu o nowoczesne technologie, takie jak:
 \begin{itemize}
-    \item \textbf{Backend:} Spring Boot – zapewniający elastyczność, bezpieczeństwo oraz wydajność aplikacji,
-    \item \textbf{Frontend:} Next.js – umożliwiający responsywność interfejsu i optymalizację SEO,
-    \item \textbf{Baza danych:} PostgreSQL – gwarantująca integralność i spójność danych,
-    \item \textbf{Konteneryzacja:} Docker – wspierający skalowalność i łatwość wdrażania systemu.
+    \item \textbf{Backend:} Spring Boot -- zapewniający elastyczność, bezpieczeństwo i wydajność aplikacji,
+    \item \textbf{Frontend:} Next.js -- umożliwiający responsywność interfejsu i optymalizację SEO,
+    \item \textbf{Baza danych:} PostgreSQL -- gwarantująca integralność i spójność danych,
+    \item \textbf{Konteneryzacja:} Docker -- wspierający skalowalność i łatwość wdrażania systemu.
 \end{itemize}
 
-\section{Najważniejsze osiągnięcia}
-System „Harmony Home Net” oferuje szereg funkcjonalności dostosowanych do potrzeb mieszkańców, administracji i administratorów systemu:
+Stworzony system oferuje szereg funkcji dostosowanych do potrzeb mieszkańców, administracji i administratorów:
 \begin{itemize}
     \item \textbf{Zarządzanie użytkownikami} -- Kompleksowy system ról i poziomów dostępu,
     \item \textbf{Obsługa płatności} -- Możliwość przeglądania należności, realizacji płatności online oraz harmonogramowania przypomnień,
@@ -22,8 +21,8 @@ System „Harmony Home Net” oferuje szereg funkcjonalności dostosowanych do p
     \item \textbf{Forum mieszkańców} -- Uproszczona platforma komunikacji wspólnoty.
 \end{itemize}
 
-\section{Wnioski i potencjał rozwoju}
-Praca wykazała, że zaprojektowany system jest w stanie efektywnie wspierać zarządzanie wspólnotami mieszkaniowymi, jednakże prototyp wymaga dalszego rozwoju w kilku kluczowych obszarach:
+\section{Wnioski}
+System „Harmony Home Net” stanowi solidną bazę do rozwoju nowoczesnych aplikacji wspierających obsługę wspólnot mieszkaniowych. Realizacja tego projektu umożliwiła zdobycie praktycznych umiejętności w zakresie projektowania systemów informatycznych, integracji zewnętrznych usług oraz testowania oprogramowania. Ponadto, prototyp spełnia swoje założenia projektowe i jest gotowy do dalszego rozwijania w kierunku pełnoprawnej aplikacji produkcyjnej, która może znacząco poprawić efektywność zarządzania wspólnotami mieszkaniowymi. Rozwój ten może nastąpić w kilku kluczowych obszarach:
 \begin{itemize}
     \item pełna integracja z zewnętrznymi systemami, np. bankowości czy urządzeń pomiarowych,
     \item rozbudowa funkcji analitycznych, takich jak generowanie zaawansowanych raportów,
@@ -31,5 +30,4 @@ Praca wykazała, że zaprojektowany system jest w stanie efektywnie wspierać za
     \item zwiększenie automatyzacji procesów poprzez implementację zaawansowanych mechanizmów opartych na diagramach BPMN.
 \end{itemize}
 
-\section{Podsumowanie}
-System „Harmony Home Net” stanowi solidną bazę do rozwoju nowoczesnych aplikacji wspierających obsługę wspólnot mieszkaniowych. Realizacja tego projektu umożliwiła zdobycie praktycznych umiejętności w zakresie projektowania systemów informatycznych, integracji zewnętrznych usług oraz testowania oprogramowania. Ponadto, prototyp spełnia swoje założenia projektowe i jest gotowy do dalszego rozwijania w kierunku pełnoprawnej aplikacji produkcyjnej, która może znacząco poprawić efektywność zarządzania wspólnotami mieszkaniowymi.
+
